# lang-refresh

./: README.md
.github/workflows/: ruby.yml
golang/: go.mod  go.sum
golang/cmd/: main.go
golang/internal/cli/: cli.go
golang/internal/client/: client.go
golang/internal/cmd/album/: album.go
golang/internal/cmd/auth/: auth.go
golang/internal/cmd/context/: context.go
golang/internal/config/: config.go  helpers.go  state.go
java/: pom.xml
java/src/main/java/com/simonnordberg/: Client.java  Main.java
java/src/main/java/com/simonnordberg/api/: ApiError.java  ApiResponse.java
java/src/main/java/com/simonnordberg/model/: Album.java
python/: api.py  main.py  model.py
ruby/: Gemfile  Guardfile  Rakefile
ruby/.github/workflows/: build.yml
ruby/.github/worksflows/: build.yml
ruby/lib/: album_import.rb
ruby/lib/album_import/: cli.rb  client.rb  importer.rb  model.rb  version.rb
ruby/test/: test_helper.rb
ruby/test/album_import/: test_cli.rb  test_importer.rb  test_model.rb
ruby/test/fixtures/albums/album1/: metadata.json
ruby/test/fixtures/albums/album2/: metadata.json
rust/: Cargo.toml
rust/src/: api.rs  main.rs
